fixes modal overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -72,11 +72,13 @@ table tbody tr:last-child td:last-child {
   overflow: hidden;
   min-width: 50vw;
   max-width: 90vw;
+  min-height: 25vh;
+  max-height: 90vh;
 }
 .alert-body {
   overflow-y: auto;
   overflow-x: hidden;
-  max-height: 85vh;
+  max-height: 80vh;
   min-height: 20vh;
 }
 
